--- a/app/views/components/_navigation.html.erb
+++ b/app/views/components/_navigation.html.erb
@@ -9,7 +9,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <%= link_to 'Orders', orders_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
