--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :phone_number %>
   </div>
 
+  <div class="field">
+    <%= form.label :is_complete %>
+    <%= form.check_box :is_complete %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
