--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,17 +1,19 @@
 <div class="row">
   <p id="notice"><%= notice %></p>
   
-  <div class="col">
+  <div class="col-6">
     <h1>Current Orders</h1>
   </div>
-  <div class="col"><%= link_to 'New Order', new_order_path, class: 'btn btn-primary' %></div>
-
+  <div class="col-6"><%= link_to 'New Order', new_order_path, class: 'btn btn-primary' %></div>
+  
+  <div class="col-12">
     <table class="table table-striped">
       <thead>
         <tr>
           <th>Order time</th>
           <th>Name</th>
           <th>Phone number</th>
+          <th>Is Complete?</th>
           <th colspan="3"></th>
         </tr>
       </thead>
@@ -22,6 +24,7 @@
             <td><%= order.order_time %></td>
             <td><%= order.name %></td>
             <td><%= order.phone_number %></td>
+            <td><%= order.is_complete %></td>
             <td><%= link_to 'Show', order %></td>
             <td><%= link_to 'Edit', edit_order_path(order) %></td>
             <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,9 +32,6 @@
         <% end %>
       </tbody>
     </table>
-    
-    <br>
-    
-    <%= link_to 'New Order', new_order_path %>
-  </div>
+  </div> 
+
 </div>
