--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <div class="col-12">
           <%= yield %>
         </div>
+        <%= debug(params) %>
       </div>
     </div>
     
