--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <p id="notice"><%= notice %></p>
   
   <div class="col-6">
-    <h1>Current Orders</h1>
+    <h2>Current Orders</h2>
   </div>
   <div class="col-6"><%= link_to 'New Order', new_order_path, class: 'btn btn-primary' %></div>
   
@@ -21,17 +21,48 @@
       <tbody>
         <% @orders.each do |order| %>
           <tr>
-            <td><%= order.order_time %></td>
+            <td><%= time_ago_in_words(order.order_time) %></td>
             <td><%= order.name %></td>
             <td><%= order.phone_number %></td>
             <td><%= order.is_complete %></td>
-            <td><%= link_to 'Show', order %></td>
-            <td><%= link_to 'Edit', edit_order_path(order) %></td>
-            <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'ORDERS UP!', completed_order_path(order), method: :patch, class: 'btn btn-primary' %></td>
+            <td><%= link_to 'Edit', edit_order_path(order), class: 'btn btn-warning' %></td>
+            <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
           </tr>
         <% end %>
       </tbody>
     </table>
-  </div> 
+  </div>
+  
+  <div class="col-12">
+    <h2>Complete Orders</h2>
+  </div>
+  
+  <div class="col-12">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Ordered</th>
+          <th>Name</th>
+          <th>Phone number</th>
+          <th>Message Sent</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
+    
+      <tbody>
+        <% @completed_orders.each do |order| %>
+          <tr>
+            <td><%= time_ago_in_words(order.order_time) %></td>
+            <td><%= order.name %></td>
+            <td><%= order.phone_number %></td>
+            <td><%= time_ago_in_words(order.updated_at) %></td>
+            <td><%= link_to 'ORDERS UP!', completed_order_path(order), method: :patch, class: 'btn btn-primary' %></td>
+            <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 
 </div>
